--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ fieldset[disabled] .btn-primary.active {
 .navbar{
   font-family: 'Staatliches';
 }
-@media(max-width:900px) {
+@media (min-width:0px) and (max-width:900px) {
   .navbar-default .navbar-brand {
     font-weight: 100;
     font-size: 3rem;
@@ -175,7 +175,7 @@ fieldset[disabled] .btn-primary.active {
 
   }
 }
-@media(min-width:768px) {
+@media (min-width:0px) and (min-width:768px) {
 
     .navbar-default {
         padding: 25px 0;
@@ -236,7 +236,7 @@ body{
   color: #252525;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1024px) and (max-width:2000px) {
   .hero {
     height: 100vh;
     min-height: 100vh;
@@ -259,7 +259,7 @@ body{
 
 .paragraph {
   font-weight: 500;
-	font-size: 3rem;
+	font-size: 3.5rem;
 	padding-top: 1rem;
 	display: inline;
 }
@@ -284,7 +284,7 @@ body{
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
 }
 
-@media screen and (min-width: 900px) {
+@media (min-width: 900px) and (max-width: 2000px) {
 	.person_image {
 		-webkit-clip-path: polygon(31% 0, 100% 0%, 100% 100%, 0% 100%);
 		clip-path: polygon(31% 0, 100% 0%, 100% 100%, 0% 100%);
@@ -293,7 +293,7 @@ body{
 
 
 
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 0px) and (max-width: 500px) {
   .heading {
     font-weight: 800;
     font-size: 4.5rem;
@@ -308,7 +308,7 @@ body{
   }
 
   .paragraph {
-    font-weight: 800;
+    font-weight: 500;
     font-size: 2.5rem;
     margin-top: 0rem;
     display: inline;
@@ -316,9 +316,7 @@ body{
 }
 
 
-@media screen and (max-width: 580px) {
-
-  
+@media screen and (min-width: 0px) and (max-width: 580px) {
   .heading {
     font-weight: 500;
     font-size: 4rem;
@@ -332,7 +330,7 @@ body{
   }
 
   .paragraph {
-    font-weight: 500;
+    font-weight: 50000;
     font-size: 2rem;
     margin-top: 0rem;
     display: inline;
@@ -356,7 +354,7 @@ body{
 }
 
 
-@media screen and (min-width: 700px) {
+@media screen and (min-width: 700px) and (max-width: 1025px){
     .popup{  
       text-align: center;
       padding-left: 20px;
@@ -364,7 +362,7 @@ body{
       background-color: #ebedec;
 	}
 }
-@media screen and (min-width: 1025px) {
+@media screen and (min-width: 1025px) and (max-width: 2000px) {
   .popup{  
     text-align: center;
     margin-left: 100px;
@@ -669,5 +667,3 @@ footer{
     padding:5px;
   }
 }
-
-
