--- a/style.css
+++ b/style.css
@@ -213,17 +213,20 @@ fieldset[disabled] .btn-primary.active {
 /*---------------------------*/
 
 
-
-* {
-	margin: 0;
-	padding: 0;
-  box-sizing: border-box;
-}
-
 body{
+  text-align: center;
   background-color: #ebedec;
   padding-top: 40px;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: 0;
+  margin-right: 0;
 }
+
+
+
+
+
 
 .hero {
 	height: 700px;
@@ -354,13 +357,13 @@ body{
 }
 
 
-@media screen and (min-width: 700px) and (max-width: 1025px){
+@media screen and (max-width: 1025px){
     .popup{  
       text-align: center;
       padding-left: 20px;
       padding-right: 20px;
       background-color: #ebedec;
-	}
+	  }
 }
 @media screen and (min-width: 1025px) and (max-width: 2000px) {
   .popup{  
@@ -421,11 +424,7 @@ body{
 }
 
 @media screen and (max-width: 700px) {
-  .popup{  
-    text-align: center;
-    margin-left: 14px;
-    margin-right: 14px;
-  }
+
   .show .img-show{
     width: 99%;
     height: auto;
@@ -438,11 +437,11 @@ body{
   .img-show img{
     width: 0%;
     height: 0%;
-}
+  }
   .img-show span{
     display: none;
   }
-.imageshow .overlay{
+  .imageshow .overlay{
     display: none;
   }
 }
@@ -462,6 +461,7 @@ body{
   -webkit-text-fill-color: transparent;
   font-family: 'Staatliches', cursive;
 }
+
 @media screen and (max-width: 700px) {
   .gallerytext{
     font-size: 3.5rem;
