--- a/style.css
+++ b/style.css
@@ -9,6 +9,14 @@
 
 
 
+
+
+
+
+
+ 
+
+
 a,
 a:hover,
 a:focus,
@@ -276,7 +284,7 @@ body{
 
 .person_image {
 	width: 20%;
-  min-width: 300px;
+  min-width: 200px;
 	height: auto;
   max-width: 100%;
 	object-fit: cover;
@@ -496,7 +504,7 @@ body{
 @media screen and (max-width: 700px) {
   .column {
     *flex: 100%;
-    max-width: 100%;
+    *min-width: 100%;
     padding: 0 1px;
   }
   .column img {
@@ -519,7 +527,7 @@ body{
 :root {
   --primary: #efeada;
   --secondary: lightblue;
-  --dark: #607d8b;
+  --dark: #000000;
   --light: #f7f7f7;
   --shadow: 8px 8px 20px black;
 }
@@ -527,13 +535,17 @@ body{
 
 
 .skillsection {
-  padding: 0px 30px;
   padding-bottom: 30px;
+  text-align: center
+  
 }
 .skillcontainer {
   max-width: 1200px;
   margin: auto;
+  margin-left: 20%;
+  margin-right: 20%;
 }
+/* 
 .grid-row {
   cursor: auto;
   display: grid;
@@ -553,7 +565,7 @@ body{
   font-size: 30px;
   *margin-bottom: 0;
 }
-
+*/
 .grid-row .grid-item {
   border-radius: 10px;
   height: 250px;
@@ -565,9 +577,31 @@ body{
   text-align: center;
   flex-direction: column-reverse;
   align-items: stretch;
+} 
+
+.grid-row .grid-item h3 {
+  font-family: 'Staatliches', cursive;
+  font-size: 30px;
+  margin-bottom: 20px;
 }
 
-.grid-item img {
+.skillcard{
+  text-align: center;
+  width: 220px;
+  padding-bottom: 20px;
+  margin: 10px;
+}
+
+.grid-row {
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  
+}
+.grid-row img {
   padding-top: 10px;
   padding-bottom: 30px;
   max-height: 150px;
@@ -575,7 +609,7 @@ body{
 }
 
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 800px) {
   .skillsection {
     padding: 70px 30px;
   }
@@ -584,12 +618,22 @@ body{
     margin: auto;
   }
   .grid-row {
-    cursor: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+    /* cursor: auto;
     display: flex;
     grid-template-columns: repeat(auto-fill, minmax(100px, 120px));
     grid-gap: 30px 20px;
     justify-content: center;
-    align-items: baseline;
+    align-items: baseline; */
+  }
+
+  .skillcard{
+    text-align: center;
+    width: 130px;
+    
   }
 
   .grid-row .grid-item span {
@@ -599,7 +643,7 @@ body{
   .grid-row .grid-item h3 {
     font-family: 'Staatliches', cursive;
     font-size: 15px;
-    *margin-bottom: 0;
+    margin-bottom: 10px;
   }
 
   .grid-row .grid-item {
@@ -617,13 +661,13 @@ body{
     align-items: stretch;
   }
 
-  .grid-item img {
+  .grid-row img {
     padding-bottom: 0px;
-    padding-top: 10px;
-    max-height: 55px;
+    padding-top: 25px;
+    max-height: 80px;
     object-fit: contain;
   }
-}
+} 
 
 /*-----------------*/
 
